php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #28702 SOAP does not parse WSDL service address correctly
Submitted: 2004-06-08 19:50 UTC Modified: 2004-06-10 11:07 UTC
From: fredb86 at hotmail dot com Assigned: dmitry (profile)
Status: Closed Package: SOAP related
PHP Version: 5.0.0RC3 OS: Windows XP
Private report: No CVE-ID: None
 [2004-06-08 19:50 UTC] fredb86 at hotmail dot com
Description:
------------
SOAP is parsing the WSDL but not using the correct address in the HTTP call. The WSDL fragment defining the service address looks like this:

<service name="dataservice">
<port name="dataservicePort" binding="tns:dataserviceBinding">
  <soap:address location="http://myservice.com/junk/soap?Service=getdata" /> 
  </port>
  </service>

The SOAP extension is sending this HTTP header:

POST /junk/soap HTTP/1.1
Host: myservice.com
Connection: Keep-Alive
User-Agent: SOAP 0.1
Content-Type: text/xml; charset="utf-8"
SOAPAction: "http://action.myservice.com"
Content-Length: 458

It should be sending this HTTP header:


POST junk/soap?Service=getdata HTTP/1.1
Host: myservice.com
Connection: Keep-Alive
User-Agent: SOAP 0.1
Content-Type: text/xml; charset="utf-8"
SOAPAction: "http://action.myservice.com"
Content-Length: 458




Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-06-09 04:45 UTC] fredb86 at hotmail dot com
Problem is in 5.0.0RC2 AND 5.0.0RC3
 [2004-06-09 04:47 UTC] fredb86 at hotmail dot com
The User-Agent: header should say "PHP SOAP 0.1", not just "SOAP 0.1".
 [2004-06-09 09:41 UTC] derick@php.net
Assigning to the maintainer.
 [2004-06-10 11:07 UTC] dmitry@php.net
Fixed in CVS.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC