Fixed bug #28702 (SOAP does not parse WSDL service address correctly).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@160991 c90b9560-bf6c-de11-be94-00142212c4b1